--- a/less/loyalty.less
+++ b/less/loyalty.less
@@ -296,6 +296,7 @@
     &-print {
         display: list-item;
         list-style-position: inside;
+        width: 0.9em;
 
         &::before {
             color: #fff;
