--- a/sass/_loyalty.scss
+++ b/sass/_loyalty.scss
@@ -302,6 +302,7 @@
     &-print {
         display: list-item;
         list-style-position: inside;
+        width: 0.9em;
 
         &::before {
             color: #fff;
